# Duck-Engine

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md
Assets/Shaders/: default.frag  default.vert
Core/: Cargo.toml
Core/src/: lib.rs  window.rs
Core/src/render_engine/: main_renderer.rs
Duck-Core/: Cargo.toml
Duck-Core/src/: lib.rs  window.rs
Duck-Core/src/render_engine/: mod.rs
Duck-Scene/: Cargo.toml
Engine/: CMakeLists.txt
Engine/src/: Engine.cpp  Engine.h  pch.cxx  pch.hxx
Engine/src/Core/: Constants.h  MeshLoader.cpp  MeshLoader.h  Module.cpp  Module.h  UUID.cpp  UUID.h
Engine/src/Core/Threads/: Executor.cpp  Executor.h  RenderThread.cpp  RenderThread.h  SceneThread.cpp  SceneThread.h  Thread.cpp  Thread.h
Engine/src/Event/: Event.h  WindowEvent.h
Engine/src/Graphics/: Color.h  Material.h  Mesh.h  Model.cpp  Model.h  RenderStack.cpp  Shader.cpp  Vertex.cpp  Window.cpp  Window.h
Engine/src/Graphics/Renderers/: VoxelRenderer.cpp  VoxelRenderer.h
Engine/src/Input/: Input.cpp  Input.h  Keybind.cpp  Keybind.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Engine/src/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Engine/src/Scene/Components/: Component.cpp  Component.h  Renderable3D.h  Transform.cpp  Transform.h
Engine/src/Scene/Objects/: Camera.cpp  Camera.h  VoxelObject.cpp  VoxelObject.h  VoxelStack.cpp  VoxelStack.h
Engine/src/Utils/: FileUtils.h  VoxelUtils.cpp  VoxelUtils.h
Example/: main.cpp
Example/Components/: CameraMovementComponent.cpp  CameraMovementComponent.h  FpsComponent.cpp  FpsComponent.h
crates/bender_window/: Cargo.toml
crates/bender_window/src/: lib.rs  user_window.rs  window.rs
crates/duck_audio/: Cargo.toml
crates/duck_core/: Cargo.toml
crates/duck_input/: Cargo.toml
crates/duck_input/src/: input.rs
crates/duck_internal/: Cargo.toml
crates/duck_internal/src/: lib.rs
crates/duck_math/: Cargo.toml
crates/duck_math/src/: lib.rs
crates/duck_render/: Cargo.toml
crates/duck_render/src/: entity_renderer.rs  lib.rs
crates/duck_scene/: Cargo.toml
crates/duck_scene/src/: lib.rs
crates/duck_scene/src/duck_component/: Drawable.rs  mod.rs
crates/duck_scene/src/duck_entity/: mod.rs
crates/duck_tester/: Cargo.toml
crates/duck_ui/: Cargo.toml
crates/duck_window/: Cargo.toml
crates/duck_window/src/: window.rs
crates/duck_world/: Cargo.toml
crates/duck_world/src/: lib.rs  vertex.rs  world_gen.rs
engine_tester/: Cargo.toml
engine_tester/src/: main.rs
examples/: bender_test.rs  tester.rs
src/: Engine.cpp  Engine.h  lib.rs  main.cpp  main.rs  pch.hxx
src/Core/: MeshLoader.h  Transform.h
src/Event/: Event.h  WindowEvent.h
src/Graphics/: Camera.cpp  Camera.h  Color.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderStack.cpp  RenderStack.h  Shader.cpp  Shader.h  Vertex.h  Window.cpp  Window.h
src/Graphics/Renderers/: VoxelRenderer.h
src/Input/: Keyboard.cpp  Keyboard.h
src/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/Scene/Components/: Component.cpp  Component.h  Renderable3D.cpp  Renderable3D.h  Transform.cpp  Transform.h
src/Scene/Objects/: Camera.cpp  Camera.h
src/UserInterface/: interface.rs
src/Utils/: FileUtils.cpp
src/lib/: mod.rs
src/lib/main_window/: mod.rs
src/lib/world_gen/: mod.rs
ui/: Cargo.toml
ui/src/: window.rs
