[package]
name = "duck-engine"
version = "0.1.0"
authors = ["Sechi <mrsechi@protonmail.com>", "Vrikka <vrikkadev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
# image = "0.23"
matrix = "0.22.0"
vulkano = "0.30.0"