[package]
name = "duck-engine"
version = "0.1.0"
authors = ["Sechi <mrsechi@protonmail.com>", "Vrikka <vrikkadev@gmail.com>"]
edition = "2021"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A voxel render engine called DUCK, designed for performance and elegance!"
exclude = [".github/", "crates/"]
homepage = "?"
license = "MIT License"
readme = "README.md"
repository = "https://github.com/HanJoHibender/Duck-Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "crates/*"
  ]

[dependencies]
duck_internal = { path = "./crates/duck_internal"}
duck_window = { path = "./crates/duck_window"}