[package]
name = "duck-core"
version = "0.1.0"
authors = ["Sechi <mrsechi@protonmail.com>", "Vrikka <vrikkadev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "duck_core"

[dependencies]

winit = "0.26"
vulkano = "0.30.0"
vulkano-win = "0.30.0"
vulkano-shaders = "0.30.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
