[package]
name = "duck-ui"
version = "0.1.0"
authors = ["Sechi <mrsechi@protonmail.com>", "Vrikka <vrikkadev@gmail.com>"]
edition = "2021"
description = "Extendable UI library"
keywords = ["ui", "game", "gui"]
categories = ["game-development", "gui"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]


[dependencies]
winit = "0.26"
image = "0.23"
bevy = "0.8"
#duck core
ash = { path = "./libs/ash/ash", default-features = false, features = ["linked", "debug"] }
ash-window = { path = "./libs/ash/ash-window" }
