[package]
name = "duck-ui"
version = "0.1.0"
authors = ["Sechi <mrsechi@protonmail.com>", "Vrikka <vrikkadev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
image = "0.23"
bevy = "0.8"
ash = { path = "./libs/ash/ash", default-features = false, features = ["linked", "debug"] }
ash-window = { path = "./libs/ash/ash-window" }