[package]
name = "bender_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
# winit = "0.27.2"
# vulkano = "0.30.0"
# vulkano-win = "0.30.0"
# vulkano-shaders = "0.30.0"
# simple_logger = "2.3.0"
glfw = "0.45.0"