[package]
name = "duck_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
bytemuck = "1.8.0"
egui = "0.19.0"
egui_demo_lib = "0.19.0"
egui-winit = "0.19.0"
image = "0.23.14"
winit = "0.27.2"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
egui_winit_vulkano = "0.19.0"
vulkano-util = "0.30.0"