[package]
name = "duck_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duck_render = { path = "../duck_render"}
winit = "0.26.0"
vulkano = "0.30.0"
vulkano-win = "0.30.0"
vulkano-shaders = "0.30.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
